--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="" class="logo"><img src="./assets/img/logotipo_texto_blanco.png" alt="" width="360" /></a>
         <nav>
             <ul>
-                <li><a href="./pages/components/login.html">Iniciar sesión</a></li>
+                <li><a href="./components/login.html">Iniciar sesión</a></li>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="./components/foro.html">Foro</a></li>
                 <li><a href="./components/chat.html">Chat</a></li>
@@ -30,8 +30,8 @@
 
     <main>
         <section class="assets/img/logotipo_para_editar-removebg-preview.png alt="">
-            <div style="text-align: center;">
-                <img src="./assets/img/logotipo_para_editar-removebg-preview.png" alt="Descripción de la imagen">
+            <div style=" text-align: center;">
+            <img src="./assets/img/logotipo_para_editar-removebg-preview.png" alt="Descripción de la imagen">
             </div>
             <h2 style="color: white; font-size: 2.5rem; text-align: center; margin-top: 20px;">
                 Bienvenido a Dars Academy</h2>
