--- a/index.html
+++ b/index.html
@@ -29,39 +29,49 @@
     </header>
 
     <main>
-        <section class="assets/img/logotipo_para_editar-removebg-preview.png alt="">
-            <div style=" text-align: center;">
-            <img src="./assets/img/logotipo_para_editar-removebg-preview.png" alt="Descripción de la imagen">
+        <section>
+            <div style="text-align: center;">
+                <h2 style="color: white; font-size: 2.5rem; margin-top: 20px;">
+                    Bienvenido a Dars Academy
+                </h2>
+                <p style="color: white; font-size: 1rem; margin-top: 10px;">
+                    Tu espacio para aprender y colaborar con otros estudiantes. Explora recursos, interactúa y comparte
+                    conocimiento.
+                </p>
             </div>
-            <h2 style="color: white; font-size: 2.5rem; text-align: center; margin-top: 20px;">
-                Bienvenido a Dars Academy</h2>
-            <p style="color: white; font-size: 1.0rem; text-align: center; margin-top: 10px;">
-                Tu espacio para aprender y colaborar con otros estudiantes. Explora recursos, interactúa y comparte
-                conocimiento.</p>
         </section>
 
-        <section class="carrusel">
-            <div id="carouselExample" class="carousel slide">
+        <!-- Carrusel Bootstrap -->
+        <section class="carrusel mt-4">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/img/carrusel109.png" class="d-block w-100" alt="500" height=1000">
+                        <img src="./assets/img/carrusel109.png" class="d-block w-100 carrusel-img" alt="Slide 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/carrusel.jpg" class="d-block w-100" alt="500" height="1000">
+                        <img src="./assets/img/carrusel.jpg" class="d-block w-100 carrusel-img" alt="Slide 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/carrusel3.jpg" class="d-block w-100" alt="500" height="1000">
+                        <img src="./assets/img/carrusel3.jpg" class="d-block w-100 carrusel-img" alt="Slide 3">
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                    <span class="visually-hidden">Anterior</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
+                    <span class="visually-hidden">Siguiente</span>
                 </button>
             </div>
         </section>
@@ -93,13 +103,14 @@
                             ideas.</p>
                     </article>
                 </div>
-            </div>c
+            </div>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Dars Academy. Todos los derechos reservados.</p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
