--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <img src="./assets/img/carrusel.jpg" class="d-block w-100 carrusel-img" alt="Slide 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/img/carrusel3.jpg" class="d-block w-100 carrusel-img" alt="Slide 3">
+                        <img src="./assets/img/grupodetrabajo.jpg" class="d-block w-100 carrusel-img" alt="Slide 3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
